<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_margin="5dp"
    android:background="@drawable/video_tem_background"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/videoImageView"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play_circle" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:padding="5dp" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/videoName"
                style="@style/textStyleVideoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/file_name" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/videoMoreIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:src="@drawable/ic_more" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/videoSize"
                style="@style/textStyleVideoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/video_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/videoDuration"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/videoDuration"
                style="@style/textStyleVideoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/file_length"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>







