<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:maxads="http://schemas.applovin.com/android/1.0"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_car_name"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_video" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:elevation="2dp"
                        android:padding="3dp" />
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/videoImageView"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:scaleType="center"
                            app:shapeAppearanceOverlay="@style/roundedImageView" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:text="Video Name"
                            android:id="@+id/videoName"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </FrameLayout>


                <android.widget.Button
                    android:id="@+id/button_download"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background_light_blue"
                    android:drawableEnd="@drawable/ic_download"
                    android:text="@string/downloads_video"
                    android:textAllCaps="false" />

                <android.widget.Button
                    android:id="@+id/button_stream"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background_light_orange"
                    android:drawableEnd="@drawable/ic_stream"
                    android:text="@string/stream_video"
                    android:textAllCaps="false" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/nativeTemplateView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:gnt_template_type="@layout/gnt_small_template_view" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>